crates/vize_atelier_vapor/src/tests_source_map/snapshots/vize_atelier_vapor__tests_source_map__slot_props__slot_props_indexed_map.snap
---
source: crates/vize_atelier_vapor/src/tests_source_map/slot_props.rs
expression: segments
---
[
    "1:23 \"b> </b>\\\"\" -> \"b>{{ fal\"",
    "3:0 \"export f\" -> \"<slot na\"",
    "7:54 \"_ctx.fal\" -> \"fallback\" [fallback]",
]
