crates/vize_atelier_vapor/src/tests_source_map/snapshots/vize_atelier_vapor__tests_source_map__slot_props__slot_props_selector_code.snap
---
source: crates/vize_atelier_vapor/src/tests_source_map/slot_props.rs
expression: code
---
import { createSlot as _createSlot, txt as _txt, toDisplayString as _toDisplayString, setText as _setText, renderEffect as _renderEffect, template as _template } from 'vue';
const t0 = _template("<b> </b>")

export function render(_ctx) {
  const n0 = _createSlot(() => (_ctx.selected), { $: [() => ({ [(_ctx.name)]: _ctx.value })] }, () => {
    const n1 = t0()
    const x1 = _txt(n1)
    _renderEffect(() => _setText(x1, _toDisplayString(_ctx.fallback)))
    return n1
  })
  return n0
}
